# sayfood

./: .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  pyproject.toml  setup.cfg
backend/: .gitignore  Dockerfile  Makefile  manage.py  pyproject.toml  run.sh
backend/api/: mixins.py  paginators.py  permissions.py  serializers.py  urls.py  views.py
backend/core/: services.py  signals.py  texts.py  validators.py
backend/migrations/: env.py
backend/migrations/versions/: 2026_06_14_2325-b5c5dcbbb2d9_initial.py  2026_06_27_1933-6d7d7044dcd2_add_meal_plan_table.py  2026_06_29_2214-2b9c18d8b02e_add_user_daily_request_limits.py
backend/recipes/: admin.py
backend/sayfood/: asgi.py  settings.py  urls.py
backend/src/: app.py
backend/src/application/auth/: __init__.py  dto.py  user_change_email.py  user_change_password.py  user_login.py  user_logout.py  user_register.py
backend/src/application/meal_plan/: __init__.py  dto.py  meal_plan_generation.py
backend/src/domain/: __init__.py
backend/src/domain/meal/: events.py  exceptions.py  value_objects.py
backend/src/domain/meal_plan/: aggregates.py  exceptions.py  repositories.py  value_objects.py
backend/src/domain/seedwork/: aggregates.py  entities.py  events.py  exceptions.py  utils.py  value_objects.py
backend/src/domain/user/: aggregates.py  entities.py  events.py  exceptions.py  repositories.py  value_objects.py
backend/src/infrastructure/auth/: hasher.py  session.py
backend/src/infrastructure/config/: settings.py
backend/src/infrastructure/database/: base.py  models.py
backend/src/infrastructure/database/mappers/: meal_plan.py  user.py  user_mapper.py
backend/src/infrastructure/database/repositories/: __init__.py  meal_plan.py  session.py  user.py
backend/src/infrastructure/llm/: prompt.py  provider.py
backend/src/interfaces/api/: dependencies.py  exception_handlers.py
backend/src/interfaces/api/routes/: auth.py  meal_plan.py
backend/src/interfaces/api/schemas/: auth.py  meal_plan.py
backend/src/shared/: loaders.py
backend/users/: admin.py  models.py
docs/: architecture.md  openapi-schema.yml  requirements.md
frontend/: Dockerfile  package-lock.json  package.json
frontend/src/components/header/: index.js
infra/: docker-compose.yml  nginx.conf
postman_collection/: README.md
src/: main.py
src/config/: config.py
src/sayfood/: settings.py  urls.py  wsgi.py
