[project]
name = "sayfood"
version = "0.1.0"
description = "Gastronomic AI assistant. Let's say <food> and count the calories together."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115.12",
    "uvicorn>=0.34.3",
]

[dependency-groups]
dev = [
    "black>=25.1.0",
]
