[project]
name = "sayfood"
version = "0.1.0"
description = "AI daily meal planner."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "asyncpg>=0.31.0",
    "bcrypt>=5.0.0",
    "pydantic>=2.13.4",
    "pyyaml>=6.0.3",
    "sqlalchemy>=2.0.50",
]

[dependency-groups]
dev = ["mypy>=2.1.0", "ruff>=0.15.15", "types-pyyaml>=6.0.12.20260518"]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "SIM", # flake8-simplify
    "I",   # isort
    "D",   # pydocstyle
]
ignore = [
    "D100", # Missing docstring in public module
    "D104", # Missing docstring in public package
    "D107", # Missing docstring in __init__
    "B024", # Abstract base class without abstract methods
]

[tool.ruff.lint.isort]
known-first-party = ["sayfood"]

[tool.ruff.format]
quote-style = "double"

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.mypy]
strict = true
explicit_package_bases = true
